--- a/views/index.html
+++ b/views/index.html
@@ -21,20 +21,19 @@
         Example creation usage:
       </p>
       <code>
-        https://raspy-fright.glitch.me/new/https://www.google.com<br>
-        https://raspy-fright.glitch.me/new/http://foo.com:80
+        https://raspy-fright.glitch.me/new/https://www.google.com
       </code>
       <p>
         Example creation output:
       </p>
       <code>
-        { "original_url":"http://foo.com:80", "short_url":"https://raspy-fright.glitch.me/8170" }
+        { "original_url":"https://www.google.com", "short_url":"https://raspy-fright.glitch.me/8170" }
       </code>
       <p>
         Usage:
       </p>
       <code>
-        https://raspy-fright.glitch.me/2871
+        https://raspy-fright.glitch.me/8170
       </code>
       <p>
         Will redirect to:
